--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -6,10 +6,11 @@
         "id": "ByGXyiHZWM_q"
       },
       "source": [
-        "# **Deforum Stable Diffusion v0.7**\n",
-        "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings). Notebook by [deforum](https://discord.gg/upmXXsrwZc)\n",
+        "# **Tofu Diffusion SD**\n",
         "\n",
-        "[Quick Guide](https://docs.google.com/document/d/1RrQv7FntzOuLg4ohjRZPVL7iptIyBhwwbcEYEW2OfcI/edit?usp=sharing) to Deforum v0.7"
+        "**Tofu Diffusion is a fork of the Deforum notebook, made for single image generation**\\\n",
+        "\\\n",
+        "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings). Notebook by [deforum](https://discord.gg/upmXXsrwZc)"
       ]
     },
     {
@@ -40,13 +41,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "vohUiWo-I2HQ"
       },
       "outputs": [],
       "source": [
         "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
+        "\n",
+        "!mkdir -p /content/civitai_models\n",
         "\n",
         "def setup_environment():\n",
         "    start_time = time.time()\n",
