--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -39,11 +39,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "vohUiWo-I2HQ"
+        "cellView": "form",
+        "id": "vohUiWo-I2HQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e8444e87-bee5-4878-d43d-ead9b077e071"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "..setting up environment\n",
+            "..installing triton and xformers\n",
+            "..environment set up in 46 seconds\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
@@ -109,9 +124,56 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "#@markdown **CivitAI Model Setup**\n",
+        "\n",
+        "civitai_models_list = []\n",
+        "civitai_model_path = \"https://civitai.com/api/download/models/70977\" #@param {type:\"string\"}\n",
+        "civitai_model_name = \"Cartunafield\" #@param {type:\"string\"}\n",
+        "civitai_model_type = \".safetensors\" #@param [\".ckpt\",\".safetensors\"]\n",
+        "\n",
+        "!wget -O /content/civitai_models/{civitai_model_name}{civitai_model_type} {civitai_model_path}\n",
+        "\n",
+        "directory = \"/content/civitai_models\"\n",
+        "files_in_directory = os.listdir(directory)\n",
+        "civitai_models_list = [file for file in files_in_directory if file.endswith(\".ckpt\") or file.endswith(\".safetensors\")]"
+      ],
+      "metadata": {
+        "id": "bXa7p0CwVLlp",
+        "outputId": "20a7e00f-50d5-4bf3-82bd-bacb7db76943",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-05-15 17:07:29--  https://civitai.com/api/download/models/70977\n",
+            "Resolving civitai.com (civitai.com)... 104.26.8.150, 172.67.74.132, 104.26.9.150, ...\n",
+            "Connecting to civitai.com (civitai.com)|104.26.8.150|:443... connected.\n",
+            "HTTP request sent, awaiting response... 307 Temporary Redirect\n",
+            "Location: https://civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/111243/model/cartunafiedV3.xIjJ.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22cartunafied_v3.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2fea663d76bd24a496545da373d610fc/20230515/us-east-1/s3/aws4_request&X-Amz-Date=20230515T170730Z&X-Amz-SignedHeaders=host&X-Amz-Signature=9fc768c381f681ba4b02d312662b75e16518ed9a22b617c395e24123baa141a6 [following]\n",
+            "--2023-05-15 17:07:30--  https://civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/111243/model/cartunafiedV3.xIjJ.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22cartunafied_v3.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2fea663d76bd24a496545da373d610fc/20230515/us-east-1/s3/aws4_request&X-Amz-Date=20230515T170730Z&X-Amz-SignedHeaders=host&X-Amz-Signature=9fc768c381f681ba4b02d312662b75e16518ed9a22b617c395e24123baa141a6\n",
+            "Resolving civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com (civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com)... 104.18.9.90, 104.18.8.90, 2606:4700::6812:95a, ...\n",
+            "Connecting to civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com (civitai-delivery-worker-prod-2023-05-01.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com)|104.18.9.90|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 2132626066 (2.0G)\n",
+            "Saving to: ‘/content/civitai_models/Cartunafield.safetensors’\n",
+            "\n",
+            "afield.safetensors   10%[=>                  ] 218.01M  24.4MB/s    eta 81s    "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "0D2HQO-PWM_t"
       },
       "outputs": [],
@@ -606,7 +668,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "provenance": []
     },
