--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -39,26 +39,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "vohUiWo-I2HQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e8444e87-bee5-4878-d43d-ead9b077e071"
+        "id": "vohUiWo-I2HQ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "..setting up environment\n",
-            "..installing triton and xformers\n",
-            "..environment set up in 46 seconds\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
@@ -130,8 +116,8 @@
         "#@markdown **CivitAI Model Setup**\n",
         "\n",
         "civitai_models_list = []\n",
-        "civitai_model_path = \"https://civitai.com/api/download/models/6908?type=Model&format=SafeTensor&size=full&fp=fp16\" #@param {type:\"string\"}\n",
-        "civitai_model_name = \"Liberty\" #@param {type:\"string\"}\n",
+        "civitai_model_path = \"\" #@param {type:\"string\"}\n",
+        "civitai_model_name = \"\" #@param {type:\"string\"}\n",
         "civitai_model_type = \".safetensors\" #@param [\".ckpt\",\".safetensors\"]\n",
         "\n",
         "!wget -O /content/civitai_models/{civitai_model_name}{civitai_model_type} {civitai_model_path}\n",
@@ -142,60 +128,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bXa7p0CwVLlp",
-        "outputId": "8c460eb4-fabc-418d-c732-967c8557b134"
+        "id": "bXa7p0CwVLlp"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-05-15 17:12:01--  https://civitai.com/api/download/models/6908?type=Model\n",
-            "Resolving civitai.com (civitai.com)... 104.26.8.150, 104.26.9.150, 172.67.74.132, ...\n",
-            "Connecting to civitai.com (civitai.com)|104.26.8.150|:443... connected.\n",
-            "HTTP request sent, awaiting response... 307 Temporary Redirect\n",
-            "Location: https://civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/23661/model/libertymain.n4CO.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22liberty_main.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2fea663d76bd24a496545da373d610fc/20230515/us-east-1/s3/aws4_request&X-Amz-Date=20230515T171201Z&X-Amz-SignedHeaders=host&X-Amz-Signature=50e1114b494495556c973448f1eda94c4d67421ae0be90d24c9b5b6b0e177894 [following]\n",
-            "--2023-05-15 17:12:02--  https://civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/23661/model/libertymain.n4CO.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22liberty_main.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2fea663d76bd24a496545da373d610fc/20230515/us-east-1/s3/aws4_request&X-Amz-Date=20230515T171201Z&X-Amz-SignedHeaders=host&X-Amz-Signature=50e1114b494495556c973448f1eda94c4d67421ae0be90d24c9b5b6b0e177894\n",
-            "Resolving civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com (civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com)... 104.18.8.90, 104.18.9.90, 2606:4700::6812:85a, ...\n",
-            "Connecting to civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com (civitai-prod-settled.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com)|104.18.8.90|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 2132625893 (2.0G) [application/octet-stream]\n",
-            "Saving to: ‘/content/civitai_models/Liberty.safetensors’\n",
-            "\n",
-            "/content/civitai_mo 100%[===================>]   1.99G  42.5MB/s    in 49s     \n",
-            "\n",
-            "2023-05-15 17:12:51 (41.4 MB/s) - ‘/content/civitai_models/Liberty.safetensors’ saved [2132625893/2132625893]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(civitai_models_list)"
-      ],
-      "metadata": {
-        "id": "QFKs-PzIZNV6",
-        "outputId": "498b8be0-6a31-446b-9149-6295d8e6cab5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Cartunafield.safetensors', 'Liberty.safetensors']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -218,7 +154,7 @@
         "    #@markdown **Model Setup**\n",
         "    map_location = \"cuda\" #@param [\"cpu\", \"cuda\"]\n",
         "    model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v2-inference.yaml\",\"v2-inference-v.yaml\",\"v1-inference.yaml\"]\n",
-        "    model_checkpoint =  \"Protogen_V2.2.ckpt\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
+        "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
         "    custom_config_path = \"\" #@param {type:\"string\"}\n",
         "    custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
         "    return locals()\n",
