--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -112,15 +112,26 @@
       "cell_type": "code",
       "source": [
         "import os\n",
+        "from IPython.display import display, HTML\n",
         "\n",
         "#@markdown **CivitAI Model Setup**\n",
         "\n",
         "civitai_models_list = []\n",
         "civitai_model_path = \"\" #@param {type:\"string\"}\n",
         "civitai_model_name = \"\" #@param {type:\"string\"}\n",
-        "civitai_model_type = \".safetensors\" #@param [\".ckpt\",\".safetensors\"]\n",
+        "civitai_model_type = \".ckpt\" #@param [\".ckpt\",\".safetensors\"]\n",
         "\n",
-        "!wget -O /content/civitai_models/{civitai_model_name}{civitai_model_type} {civitai_model_path}\n",
+        "#@markdown\n",
+        "#@markdown *Check your model type on CivitAI*\\\n",
+        "#@markdown --- Pickletensor -> .ckpt \\\n",
+        "#@markdown --- Safetensor -> .safetensors\n",
+        "\n",
+        "if not civitai_model_path:\n",
+        "    display(HTML('<font color=\"red\">Link missing</font>'))\n",
+        "elif not civitai_model_name:\n",
+        "    display(HTML('<font color=\"red\">Name missing</font>'))\n",
+        "else:\n",
+        "   !wget -O /content/civitai_models/{civitai_model_name}{civitai_model_type} {civitai_model_path}\n",
         "\n",
         "directory = \"/content/civitai_models\"\n",
         "files_in_directory = os.listdir(directory)\n",
