--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -190,7 +190,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "E0tJVYA4WM_u"
       },
       "outputs": [],
@@ -198,58 +197,58 @@
         "def DeforumAnimArgs():\n",
         "\n",
         "    #@markdown ####**Animation:**\n",
-        "    animation_mode = 'None' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
-        "    max_frames = 1000 #@param {type:\"number\"}\n",
-        "    border = 'replicate' #@param ['wrap', 'replicate'] {type:'string'}\n",
+        "    animation_mode = 'None' \n",
+        "    max_frames = 1000 \n",
+        "    border = 'replicate' \n",
         "\n",
-        "    #@markdown ####**Motion Parameters:**\n",
-        "    angle = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    zoom = \"0:(1.04)\"#@param {type:\"string\"}\n",
-        "    translation_x = \"0:(10*sin(2*3.14*t/10))\"#@param {type:\"string\"}\n",
-        "    translation_y = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    translation_z = \"0:(10)\"#@param {type:\"string\"}\n",
-        "    rotation_3d_x = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    rotation_3d_y = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    rotation_3d_z = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    flip_2d_perspective = False #@param {type:\"boolean\"}\n",
-        "    perspective_flip_theta = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    perspective_flip_phi = \"0:(t%15)\"#@param {type:\"string\"}\n",
-        "    perspective_flip_gamma = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    perspective_flip_fv = \"0:(53)\"#@param {type:\"string\"}\n",
-        "    noise_schedule = \"0: (0.02)\"#@param {type:\"string\"}\n",
-        "    strength_schedule = \"0: (0.65)\"#@param {type:\"string\"}\n",
-        "    contrast_schedule = \"0: (1.0)\"#@param {type:\"string\"}\n",
-        "    hybrid_comp_alpha_schedule = \"0:(1)\" #@param {type:\"string\"}\n",
-        "    hybrid_comp_mask_blend_alpha_schedule = \"0:(0.5)\" #@param {type:\"string\"}\n",
-        "    hybrid_comp_mask_contrast_schedule = \"0:(1)\" #@param {type:\"string\"}\n",
-        "    hybrid_comp_mask_auto_contrast_cutoff_high_schedule =  \"0:(100)\" #@param {type:\"string\"}\n",
-        "    hybrid_comp_mask_auto_contrast_cutoff_low_schedule =  \"0:(0)\" #@param {type:\"string\"}\n",
+        "    ##@markdown ####**Motion Parameters:**\n",
+        "    angle = \"0:(0)\"\n",
+        "    zoom = \"0:(1.04)\"\n",
+        "    translation_x = \"0:(10*sin(2*3.14*t/10))\"\n",
+        "    translation_y = \"0:(0)\"\n",
+        "    translation_z = \"0:(10)\"\n",
+        "    rotation_3d_x = \"0:(0)\"\n",
+        "    rotation_3d_y = \"0:(0)\"\n",
+        "    rotation_3d_z = \"0:(0)\"\n",
+        "    flip_2d_perspective = False \n",
+        "    perspective_flip_theta = \"0:(0)\"\n",
+        "    perspective_flip_phi = \"0:(t%15)\"\n",
+        "    perspective_flip_gamma = \"0:(0)\"\n",
+        "    perspective_flip_fv = \"0:(53)\"\n",
+        "    noise_schedule = \"0: (0.02)\"\n",
+        "    strength_schedule = \"0: (0.65)\"\n",
+        "    contrast_schedule = \"0: (1.0)\"\n",
+        "    hybrid_comp_alpha_schedule = \"0:(1)\" \n",
+        "    hybrid_comp_mask_blend_alpha_schedule = \"0:(0.5)\"\n",
+        "    hybrid_comp_mask_contrast_schedule = \"0:(1)\"\n",
+        "    hybrid_comp_mask_auto_contrast_cutoff_high_schedule =  \"0:(100)\"\n",
+        "    hybrid_comp_mask_auto_contrast_cutoff_low_schedule =  \"0:(0)\"\n",
         "\n",
-        "    #@markdown ####**Sampler Scheduling:**\n",
-        "    enable_schedule_samplers = False #@param {type:\"boolean\"}\n",
+        "    ##@markdown ####**Sampler Scheduling:**\n",
+        "    enable_schedule_samplers = False \n",
         "    sampler_schedule = \"0:('euler'),10:('dpm2'),20:('dpm2_ancestral'),30:('heun'),40:('euler'),50:('euler_ancestral'),60:('dpm_fast'),70:('dpm_adaptive'),80:('dpmpp_2s_a'),90:('dpmpp_2m')\" #@param {type:\"string\"}\n",
         "\n",
-        "    #@markdown ####**Unsharp mask (anti-blur) Parameters:**\n",
-        "    kernel_schedule = \"0: (5)\"#@param {type:\"string\"}\n",
-        "    sigma_schedule = \"0: (1.0)\"#@param {type:\"string\"}\n",
-        "    amount_schedule = \"0: (0.2)\"#@param {type:\"string\"}\n",
-        "    threshold_schedule = \"0: (0.0)\"#@param {type:\"string\"}\n",
+        "    ##@markdown ####**Unsharp mask (anti-blur) Parameters:**\n",
+        "    kernel_schedule = \"0: (5)\"\n",
+        "    sigma_schedule = \"0: (1.0)\"\n",
+        "    amount_schedule = \"0: (0.2)\"\n",
+        "    threshold_schedule = \"0: (0.0)\"\n",
         "\n",
-        "    #@markdown ####**Coherence:**\n",
-        "    color_coherence = 'Match Frame 0 LAB' #@param ['None', 'Match Frame 0 HSV', 'Match Frame 0 LAB', 'Match Frame 0 RGB', 'Video Input'] {type:'string'}\n",
-        "    color_coherence_video_every_N_frames = 1 #@param {type:\"integer\"}\n",
-        "    color_force_grayscale = False #@param {type:\"boolean\"}\n",
-        "    diffusion_cadence = '1' #@param ['1','2','3','4','5','6','7','8'] {type:'string'}\n",
+        "    ##@markdown ####**Coherence:**\n",
+        "    color_coherence = 'Match Frame 0 LAB'\n",
+        "    color_coherence_video_every_N_frames = 1 \n",
+        "    color_force_grayscale = False \n",
+        "    diffusion_cadence = '1' \n",
         "\n",
-        "    #@markdown ####**3D Depth Warping:**\n",
-        "    use_depth_warping = True #@param {type:\"boolean\"}\n",
-        "    midas_weight = 0.3#@param {type:\"number\"}\n",
+        "    ##@markdown ####**3D Depth Warping:**\n",
+        "    use_depth_warping = True \n",
+        "    midas_weight = 0.3\n",
         "    near_plane = 200\n",
         "    far_plane = 10000\n",
-        "    fov = 40#@param {type:\"number\"}\n",
-        "    padding_mode = 'border'#@param ['border', 'reflection', 'zeros'] {type:'string'}\n",
-        "    sampling_mode = 'bicubic'#@param ['bicubic', 'bilinear', 'nearest'] {type:'string'}\n",
-        "    save_depth_maps = False #@param {type:\"boolean\"}\n",
+        "    fov = 40\n",
+        "    padding_mode = 'border'\n",
+        "    sampling_mode = 'bicubic'\n",
+        "    save_depth_maps = False \n",
         "\n",
         "    #@markdown ####**Video Input:**\n",
         "    video_init_path ='/content/video_in.mp4'#@param {type:\"string\"}\n",
