--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -139,6 +139,7 @@
         "\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "bXa7p0CwVLlp"
       },
       "execution_count": null,
@@ -148,6 +149,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "0D2HQO-PWM_t"
       },
       "outputs": [],
@@ -190,13 +192,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "E0tJVYA4WM_u"
       },
       "outputs": [],
       "source": [
         "def DeforumAnimArgs():\n",
         "\n",
-        "    #@markdown ####**Animation:**\n",
+        "    #@markdown ####**Load additional settings**\n",
         "    animation_mode = 'None' \n",
         "    max_frames = 1000 \n",
         "    border = 'replicate' \n",
@@ -226,7 +229,7 @@
         "\n",
         "    ##@markdown ####**Sampler Scheduling:**\n",
         "    enable_schedule_samplers = False \n",
-        "    sampler_schedule = \"0:('euler'),10:('dpm2'),20:('dpm2_ancestral'),30:('heun'),40:('euler'),50:('euler_ancestral'),60:('dpm_fast'),70:('dpm_adaptive'),80:('dpmpp_2s_a'),90:('dpmpp_2m')\" #@param {type:\"string\"}\n",
+        "    sampler_schedule = \"0:('euler'),10:('dpm2'),20:('dpm2_ancestral'),30:('heun'),40:('euler'),50:('euler_ancestral'),60:('dpm_fast'),70:('dpm_adaptive'),80:('dpmpp_2s_a'),90:('dpmpp_2m')\"\n",
         "\n",
         "    ##@markdown ####**Unsharp mask (anti-blur) Parameters:**\n",
         "    kernel_schedule = \"0: (5)\"\n",
@@ -250,34 +253,34 @@
         "    sampling_mode = 'bicubic'\n",
         "    save_depth_maps = False \n",
         "\n",
-        "    #@markdown ####**Video Input:**\n",
-        "    video_init_path ='/content/video_in.mp4'#@param {type:\"string\"}\n",
-        "    extract_nth_frame = 1#@param {type:\"number\"}\n",
-        "    overwrite_extracted_frames = True #@param {type:\"boolean\"}\n",
-        "    use_mask_video = False #@param {type:\"boolean\"}\n",
-        "    video_mask_path ='/content/video_in.mp4'#@param {type:\"string\"}\n",
+        "    ##@markdown ####**Video Input:**\n",
+        "    video_init_path ='/content/video_in.mp4'\n",
+        "    extract_nth_frame = 1\n",
+        "    overwrite_extracted_frames = True \n",
+        "    use_mask_video = False \n",
+        "    video_mask_path ='/content/video_in.mp4'\n",
         "\n",
-        "    #@markdown ####**Hybrid Video for 2D/3D Animation Mode:**\n",
-        "    hybrid_generate_inputframes = False #@param {type:\"boolean\"}\n",
-        "    hybrid_use_first_frame_as_init_image = True #@param {type:\"boolean\"}\n",
-        "    hybrid_motion = \"None\" #@param ['None','Optical Flow','Perspective','Affine']\n",
-        "    hybrid_motion_use_prev_img = False #@param {type:\"boolean\"}\n",
-        "    hybrid_flow_method = \"DIS Medium\" #@param ['DenseRLOF','DIS Medium','Farneback','SF']\n",
-        "    hybrid_composite = False #@param {type:\"boolean\"}\n",
-        "    hybrid_comp_mask_type = \"None\" #@param ['None', 'Depth', 'Video Depth', 'Blend', 'Difference']\n",
-        "    hybrid_comp_mask_inverse = False #@param {type:\"boolean\"}\n",
-        "    hybrid_comp_mask_equalize = \"None\" #@param  ['None','Before','After','Both']\n",
-        "    hybrid_comp_mask_auto_contrast = False #@param {type:\"boolean\"}\n",
-        "    hybrid_comp_save_extra_frames = False #@param {type:\"boolean\"}\n",
-        "    hybrid_use_video_as_mse_image = False #@param {type:\"boolean\"}\n",
+        "    ##@markdown ####**Hybrid Video for 2D/3D Animation Mode:**\n",
+        "    hybrid_generate_inputframes = False \n",
+        "    hybrid_use_first_frame_as_init_image = True \n",
+        "    hybrid_motion = \"None\" \n",
+        "    hybrid_motion_use_prev_img = False \n",
+        "    hybrid_flow_method = \"DIS Medium\" \n",
+        "    hybrid_composite = False \n",
+        "    hybrid_comp_mask_type = \"None\" \n",
+        "    hybrid_comp_mask_inverse = False \n",
+        "    hybrid_comp_mask_equalize = \"None\"\n",
+        "    hybrid_comp_mask_auto_contrast = False \n",
+        "    hybrid_comp_save_extra_frames = False \n",
+        "    hybrid_use_video_as_mse_image = False\n",
         "\n",
-        "    #@markdown ####**Interpolation:**\n",
-        "    interpolate_key_frames = False #@param {type:\"boolean\"}\n",
-        "    interpolate_x_frames = 4 #@param {type:\"number\"}\n",
+        "    ##@markdown ####**Interpolation:**\n",
+        "    interpolate_key_frames = False \n",
+        "    interpolate_x_frames = 4 \n",
         "    \n",
-        "    #@markdown ####**Resume Animation:**\n",
-        "    resume_from_timestring = False #@param {type:\"boolean\"}\n",
-        "    resume_timestring = \"20220829210106\" #@param {type:\"string\"}\n",
+        "    ##@markdown ####**Resume Animation:**\n",
+        "    resume_from_timestring = False\n",
+        "    resume_timestring = \"20220829210106\" \n",
         "\n",
         "    return locals()"
       ]
