--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -287,22 +287,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "i9fly1RIWM_u"
       },
       "outputs": [],
       "source": [
-        "# conditional (postitive) prompts\n",
+        "# positive prompts\n",
         "cond_prompts = {\n",
-        "    0: \"a beautiful lake by Asher Brown Durand, trending on Artstation\",\n",
-        "    20: \"a beautiful portrait of a woman by Artgerm, trending on Artstation\",\n",
+        "    \"a beautiful woman, smiling, happy, sexy, by Asher Brown Durand, trending on Artstation, 4k\",\n",
+        "    \"closeup shot, sexy young hippie at woodstock, short hair, happy,in a lake in the forest, (group of hippies swimming, waves moving, water), warm color photo, good times, instagram filters\",\n",
         "}\n",
         "\n",
-        "# unconditional (negative) prompts\n",
+        "# negative prompts\n",
         "uncond_prompts = {\n",
-        "    0: \"mountain\",\n",
-        "    20: \"\",\n",
+        "    \"(lowres, bad quality), deformed body, deformed face, ugly, extra fingers, extra limbs, bad hands\",\n",
+        "    \"\",\n",
         "}"
       ]
     },
