--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "IJjzzkKlWM_s",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "vohUiWo-I2HQ",
@@ -193,18 +193,18 @@
         "#@markdown **Path Setup**\n",
         "\n",
         "def Root():\n",
-        "    models_path = \"models\" #@param {type:\"string\"}\n",
-        "    configs_path = \"configs\" #@param {type:\"string\"}\n",
-        "    output_path = \"outputs\" #@param {type:\"string\"}\n",
+        "    models_path = \"models\" \n",
+        "    configs_path = \"configs\" \n",
+        "    output_path = \"outputs\" \n",
         "    mount_google_drive = True #@param {type:\"boolean\"}\n",
         "    models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
         "    output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
         "\n",
         "    #@markdown **Model Setup**\n",
-        "    map_location = \"cuda\" #@param [\"cpu\", \"cuda\"]\n",
-        "    model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v2-inference.yaml\",\"v2-inference-v.yaml\",\"v1-inference.yaml\"]\n",
+        "    map_location = \"cuda\" \n",
+        "    model_config = \"v1-inference.yaml\" \n",
         "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
-        "    custom_config_path = \"\" #@param {type:\"string\"}\n",
+        "    custom_config_path = \"\" \n",
         "    custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
         "    return locals()\n",
         "\n",
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "E0tJVYA4WM_u"
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "i9fly1RIWM_u"
       },
