--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -332,14 +332,14 @@
       "source": [
         "# positive prompts\n",
         "cond_prompts = {\n",
-        "    1: \"a beautiful woman, smiling, happy, sexy, by Asher Brown Durand, 4k\",\n",
+        "    1: \"(best resolution, 4k, best detail), perfect face, latina, cute round face, thick lips, 30 years, punk makeupgreen eyes, black bikini, perfect body, Cinematic lighting\",\n",
         "    2: \"photograph of a model, delicate features, beautiful face, dreadlocked hair, long bangs, long ponytail, brown eyes\",\n",
         "}\n",
         "\n",
         "# negative prompts\n",
         "uncond_prompts = {\n",
         "    1: \"(lowres, bad quality), deformed body, deformed face, ugly, extra fingers, extra limbs, bad hands\",\n",
-        "    2: \"\",\n",
+        "    2: \"(lowres, bad quality), deformed body, deformed face, ugly, extra fingers, extra limbs, bad hands\",\n",
         "}"
       ]
     },
@@ -352,10 +352,10 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **Load Settings**\n",
-        "override_settings_with_file = False #@param {type:\"boolean\"}\n",
-        "settings_file = \"custom\" #@param [\"custom\", \"512x512_aesthetic_0.json\",\"512x512_aesthetic_1.json\",\"512x512_colormatch_0.json\",\"512x512_colormatch_1.json\",\"512x512_colormatch_2.json\",\"512x512_colormatch_3.json\"]\n",
-        "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"#@param {type:\"string\"}\n",
+        "##@markdown **Load Settings**\n",
+        "override_settings_with_file = False \n",
+        "settings_file = \"custom\" \n",
+        "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"\n",
         "\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
@@ -374,9 +374,9 @@
         "    static_threshold = None   \n",
         "\n",
         "    #@markdown **Save & Display Settings**\n",
-        "    save_samples = True #@param {type:\"boolean\"}\n",
-        "    save_settings = True #@param {type:\"boolean\"}\n",
-        "    display_samples = True #@param {type:\"boolean\"}\n",
+        "    save_samples = True \n",
+        "    save_settings = True \n",
+        "    display_samples = True \n",
         "    save_sample_per_step = False #@param {type:\"boolean\"}\n",
         "    show_sample_per_step = False #@param {type:\"boolean\"}\n",
         "\n",
