--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -369,16 +369,16 @@
         "    sampler = 'ddim' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_a\", \"dpmpp_2m\"]\n",
         "    steps = 30 #@param\n",
         "    scale = 15 #@param\n",
-        "    ddim_eta = 0.0 #@param\n",
+        "    ddim_eta = 0.0\n",
         "    dynamic_threshold = None\n",
         "    static_threshold = None   \n",
         "\n",
-        "    #@markdown **Save & Display Settings**\n",
+        "    ##@markdown **Save & Display Settings**\n",
         "    save_samples = True \n",
         "    save_settings = True \n",
         "    display_samples = True \n",
-        "    save_sample_per_step = False #@param {type:\"boolean\"}\n",
-        "    show_sample_per_step = False #@param {type:\"boolean\"}\n",
+        "    save_sample_per_step = False \n",
+        "    show_sample_per_step = False \n",
         "\n",
         "    #@markdown **Batch Settings**\n",
         "    n_batch = 1 #@param\n",
@@ -391,7 +391,7 @@
         "    grid_rows = 2 #@param \n",
         "    outdir = get_output_folder(root.output_path, batch_name)\n",
         "\n",
-        "    #@markdown **Init Settings**\n",
+        "    #@markdown **Initial Image Settings**\n",
         "    use_init = False #@param {type:\"boolean\"}\n",
         "    strength = 0.65 #@param {type:\"number\"}\n",
         "    strength_0_no_init = True # Set the strength to 0 automatically when no init image is used\n",
