--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -51,14 +51,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "vohUiWo-I2HQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d4b0b0f4-7d0a-4f48-c58a-19d656856133"
+        "outputId": "b5428d4c-02f5-4313-ad04-bd0d2c31fa21"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
           "text": [
             "..setting up environment\n",
             "..installing triton and xformers\n",
-            "..environment set up in 41 seconds\n"
+            "..environment set up in 51 seconds\n"
           ]
         }
       ],
@@ -170,6 +170,7 @@
         "if output_list[-1] == \"Download successful\":\n",
         "    display(HTML('<b><font color=\"green\">CivitAI model downloaded successfully!</font></b>'))\n",
         "    print(f\"{civitai_model_name}{civitai_model_type}\")\n",
+        "    print(\"path = /content/civitai_models/\"f\"{civitai_model_name}{civitai_model_type}\")\n",
         "else:\n",
         "    print(\"Download failed\")\n",
         "\n"
