--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -34,7 +34,7 @@
         }
       ],
       "source": [
-        "#@markdown **NVIDIA GPU**\n",
+        "#@markdown **1. NVIDIA GPU**\n",
         "import subprocess, os, sys\n",
         "sub_p_res = subprocess.run(['nvidia-smi', '--query-gpu=name,memory.total,memory.free', '--format=csv,noheader'], stdout=subprocess.PIPE).stdout.decode('utf-8')\n",
         "print(f\"{sub_p_res[:-1]}\")"
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **Environment Setup**\n",
+        "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
         "!mkdir -p /content/civitai_models\n",
@@ -126,7 +126,7 @@
         "import os\n",
         "from IPython.display import display, HTML, clear_output\n",
         "\n",
-        "#@markdown **CivitAI Model Setup**\n",
+        "#@markdown **3. CivitAI Model Setup**\n",
         "\n",
         "civitai_models_list = []\n",
         "civitai_model_path = \"\" #@param {type:\"string\"}\n",
@@ -177,7 +177,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **Path Setup**\n",
+        "#@markdown **4. Path Setup**\n",
         "\n",
         "def Root():\n",
         "    models_path = \"models\" \n",
@@ -187,7 +187,7 @@
         "    models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
         "    output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
         "\n",
-        "    #@markdown **Model Setup**\n",
+        "    #@markdown **5. Model Setup**\n",
         "    map_location = \"cuda\" \n",
         "    model_config = \"v1-inference.yaml\" \n",
         "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
@@ -222,7 +222,7 @@
       "source": [
         "def DeforumAnimArgs():\n",
         "\n",
-        "    #@markdown ####**Load additional settings**\n",
+        "    #@markdown ####**5. Load additional settings**\n",
         "    #@markdown *Don't forget to run this cell!*\n",
         "    animation_mode = 'None' \n",
         "    max_frames = 1000 \n",
@@ -343,7 +343,7 @@
         "override_settings_with_file = False \n",
         "settings_file = \"custom\" \n",
         "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"\n",
-        "\n",
+        "#@markdown **6. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
         "    W = 512 #@param [512, 640, 768, 896, 1024]\n",
