--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -151,14 +151,14 @@
         "files_in_directory = os.listdir(directory)\n",
         "civitai_models_list = [file for file in files_in_directory if file.endswith(\".ckpt\") or file.endswith(\".safetensors\")]\n",
         "\n",
-        "clear_output()\n",
+        "#clear_output()\n",
         "\n",
-        "if output_list[-1] == \"Download successful\":\n",
-        "    display(HTML('<b><font color=\"green\">CivitAI model downloaded successfully!</font></b>'))\n",
-        "    print(f\"{civitai_model_name}{civitai_model_type}\")\n",
-        "    print(\"path = /content/civitai_models/\"f\"{civitai_model_name}{civitai_model_type}\")\n",
-        "else:\n",
-        "    print(\"Download failed\")\n",
+        "#if output_list[-1] == \"Download successful\":\n",
+        "#    display(HTML('<b><font color=\"green\">CivitAI model downloaded successfully!</font></b>'))\n",
+        "#    print(f\"{civitai_model_name}{civitai_model_type}\")\n",
+        "#    print(\"path = /content/civitai_models/\"f\"{civitai_model_name}{civitai_model_type}\")\n",
+        "#else:\n",
+        "#    print(\"Download failed\")\n",
         "\n"
       ],
       "metadata": {
@@ -317,6 +317,8 @@
       },
       "outputs": [],
       "source": [
+        "## 6. Prompts ##\n",
+        "\n",
         "# positive prompts\n",
         "cond_prompts = {\n",
         "    1: \"(best resolution, 4k, best detail), perfect face, latina, cute round face, thick lips, 30 years, punk makeupgreen eyes, black bikini, perfect body, Cinematic lighting\",\n",
@@ -343,7 +345,7 @@
         "override_settings_with_file = False \n",
         "settings_file = \"custom\" \n",
         "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"\n",
-        "#@markdown **6. Run**\n",
+        "#@markdown **7. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
         "    W = 512 #@param [512, 640, 768, 896, 1024]\n",
